chp13/pod-drop-chown-capability.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-drop-chown-capability
spec:
  containers:
  - name: main
    image: alpine
    command: ["/bin/sleep", "999999"]
    securityContext:
      capabilities:
        drop:                   
        - CHOWN                 

# kubectl exec pod-drop-chown-capability chown guest /tmp
# kubectl exec pod-drop-chown-capability -- ls -la / | grep tmp
