chp13/pod-with-host-network.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-host-network
spec:
  hostNetwork: true                    
  containers:
  - name: main
    image: alpine
    command: ["/bin/sleep", "999999"]


# use hostnetwork here, the pod doesnt get its own IP address
# and will be bound to the node's port
# kubectl exec pod-with-host-network ifconfig
