chp13/network-policy-ip-block.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ip-block-netpolicy
spec:
  podSelector:                       
    matchLabels:                     
      app: shopping-cart             
  ingress:
  - from:
    - ipBlock:
      cidr: 192.168.1.0/24
