chp13/network-policy-postgres.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-netpolicy
spec:
  podSelector:                       
    matchLabels:                     
      app: database                  
  ingress:                           
  - from:                            
    - podSelector:                   
        matchLabels:                 
          app: webserver             
    ports:                           
    - port: 5432
